force-app/main/default/objects/School__c/fields/Address_City__c.field-meta.xml
<CustomField>
    <fullName>Address_City__c</fullName>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>