force-app/main/default/objects/School__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baptist</fullName>
            </value>
            <value>
                <fullName>Churches Of Christ</fullName>
            </value>
            <value>
                <fullName>Church of God</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Latter Day Saints (Mormon Church)</fullName>
            </value>
            <value>
                <fullName>Evangelical Lutheran Church</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Presbyterian Church (USA)</fullName>
            </value>
            <value>
                <fullName>Roman Catholic</fullName>
            </value>
            <value>
                <fullName>U.Church</fullName>
            </value>
            <value>
                <fullName>United Methodist</fullName>
            </value>
            <value>
                <fullName>Undenominational</fullName>
            </value>
            <value>
                <fullName>Church of Brethren</fullName>
            </value>
            <value>
                <fullName>Interdenominational</fullName>
            </value>
            <value>
                <fullName>Reformed Church in America</fullName>
            </value>
            <value>
                <fullName>Wesleyan</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
            <value>
                <fullName>Free Methodist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>