force-app/main/default/objects/School__c/fields/Asian__c.field-meta.xml
<CustomField>
    <fullName>Asian__c</fullName>
    <label>Asian</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>