force-app/main/default/objects/School__c/fields/Athletic_Department_Website__c.field-meta.xml
<CustomField>
    <fullName>Athletic_Department_Website__c</fullName>
    <label>Athletic Department Website</label>
    <type>Url</type>
</CustomField>