force-app/main/default/objects/School__c/fields/Black__c.field-meta.xml
<CustomField>
    <fullName>Black__c</fullName>
    <label>Black</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>