force-app/main/default/objects/School__c/fields/Campus_Events__c.field-meta.xml
<CustomField>
    <fullName>Campus_Events__c</fullName>
    <description>List all campus events here. Put an asterick by the key or major events.</description>
    <label>Campus Events</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>