force-app/main/default/objects/School__c/fields/Campus_Housing__c.field-meta.xml
<CustomField>
    <fullName>Campus_Housing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Yes or No per College Navigator</description>
    <label>Campus Housing</label>
    <type>Checkbox</type>
</CustomField>