force-app/main/default/objects/School__c/fields/Campus_Map__c.field-meta.xml
<CustomField>
    <fullName>Campus_Map__c</fullName>
    <label>Campus Map Website</label>
    <type>Url</type>
</CustomField>