force-app/main/default/objects/School__c/fields/Campus_Setting__c.field-meta.xml
<CustomField>
    <fullName>Campus_Setting__c</fullName>
    <description>From College Navigator</description>
    <label>Campus Setting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>City: Large</fullName>
            </value>
            <value>
                <fullName>City: Midsize</fullName>
            </value>
            <value>
                <fullName>City: Small</fullName>
            </value>
            <value>
                <fullName>Suburb: Large</fullName>
            </value>
            <value>
                <fullName>Suburb: Midsize</fullName>
            </value>
            <value>
                <fullName>Suburb: Small</fullName>
            </value>
            <value>
                <fullName>Town: Fringe</fullName>
            </value>
            <value>
                <fullName>Rural: Fringe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>