force-app/main/default/objects/School__c/fields/Career_Services_Job_Posting_Site__c.field-meta.xml
<CustomField>
    <fullName>Career_Services_Job_Posting_Site__c</fullName>
    <label>Career Services Job Posting Site</label>
    <type>TextArea</type>
</CustomField>