force-app/main/default/objects/School__c/fields/Corporate_sponsor_details__c.field-meta.xml
<CustomField>
    <fullName>Corporate_sponsor_details__c</fullName>
    <label>Location 1 Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>