force-app/main/default/objects/School__c/fields/Department_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Department_Sponsor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Department Sponsor</label>
    <type>Checkbox</type>
</CustomField>