force-app/main/default/objects/School__c/fields/Event_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_1_Name__c</fullName>
    <label>Event 1 Name</label>
    <type>TextArea</type>
</CustomField>