force-app/main/default/objects/School__c/fields/Fall_2012_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Fall_2012_Holidays__c</fullName>
    <label>Fall 2012 Holidays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>