force-app/main/default/objects/School__c/fields/Fall_2013_Classes_Start__c.field-meta.xml
<CustomField>
    <fullName>Fall_2013_Classes_Start__c</fullName>
    <label>Fall 2013 Classes Start</label>
    <length>50</length>
    <type>Text</type>
</CustomField>