force-app/main/default/objects/School__c/fields/Female__c.field-meta.xml
<CustomField>
    <fullName>Female__c</fullName>
    <label>Female</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>