force-app/main/default/objects/School__c/fields/Full_Time__c.field-meta.xml
<CustomField>
    <fullName>Full_Time__c</fullName>
    <label>Full-Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>