force-app/main/default/objects/School__c/fields/Geocode__c.field-meta.xml
<CustomField>
    <fullName>Geocode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geocode</label>
    <referenceTo>geopointe__Geocode__c</referenceTo>
    <relationshipLabel>Schools</relationshipLabel>
    <relationshipName>Schools</relationshipName>
    <type>Lookup</type>
</CustomField>