force-app/main/default/objects/School__c/fields/Greek_Life_Website__c.field-meta.xml
<CustomField>
    <fullName>Greek_Life_Website__c</fullName>
    <label>Greek Life Website</label>
    <type>Url</type>
</CustomField>