force-app/main/default/objects/School__c/fields/Hispanic__c.field-meta.xml
<CustomField>
    <fullName>Hispanic__c</fullName>
    <label>Hispanic</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>