force-app/main/default/objects/School__c/fields/Indian__c.field-meta.xml
<CustomField>
    <fullName>Indian__c</fullName>
    <label>Indian</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>