force-app/main/default/objects/School__c/fields/Intramural_Website__c.field-meta.xml
<CustomField>
    <fullName>Intramural_Website__c</fullName>
    <label>Intramural Website</label>
    <type>Url</type>
</CustomField>