force-app/main/default/objects/School__c/fields/Job_Posting_Site__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Site__c</fullName>
    <label>Job Posting Site Host</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Interfase</fullName>
            </value>
            <value>
                <fullName>NACElink</fullName>
            </value>
            <value>
                <fullName>Simplicity</fullName>
            </value>
            <value>
                <fullName>University Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>