force-app/main/default/objects/School__c/fields/Kellogg_s_Distribution_Status__c.field-meta.xml
<CustomField>
    <fullName>Kellogg_s_Distribution_Status__c</fullName>
    <label>Kellogg&apos;s Distribution Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Kellogg&apos;s Original Market List</fullName>
            </value>
            <value>
                <fullName>Added outside of market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>