force-app/main/default/objects/School__c/fields/Location_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_1_Name__c</fullName>
    <label>Location 1 Name</label>
    <type>TextArea</type>
</CustomField>