force-app/main/default/objects/School__c/fields/Location_Cost__c.field-meta.xml
<CustomField>
    <fullName>Location_Cost__c</fullName>
    <label>Location 1  Cost</label>
    <type>TextArea</type>
</CustomField>