force-app/main/default/objects/School__c/fields/Login_Password__c.field-meta.xml
<CustomField>
    <fullName>Login_Password__c</fullName>
    <label>Login Password</label>
    <type>TextArea</type>
</CustomField>