force-app/main/default/objects/School__c/fields/Login_Username__c.field-meta.xml
<CustomField>
    <fullName>Login_Username__c</fullName>
    <label>Login Username</label>
    <type>TextArea</type>
</CustomField>