force-app/main/default/objects/School__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>