force-app/main/default/objects/School__c/fields/Not_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Not_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Allowed</label>
    <type>Checkbox</type>
</CustomField>