force-app/main/default/objects/School__c/fields/of_IFC_organiations__c.field-meta.xml
<CustomField>
    <fullName>of_IFC_organiations__c</fullName>
    <label># of IFC chapters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>