force-app/main/default/objects/School__c/fields/of_NPHC_chapters__c.field-meta.xml
<CustomField>
    <fullName>of_NPHC_chapters__c</fullName>
    <label># of NPHC chapters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>