force-app/main/default/objects/School__c/fields/of_TOTAL_Greek_Chapters__c.field-meta.xml
<CustomField>
    <fullName>of_TOTAL_Greek_Chapters__c</fullName>
    <label># of TOTAL Greek Chapters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>