force-app/main/default/objects/School__c/fields/Organization_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Organization_Sponsor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organization Sponsor</label>
    <type>Checkbox</type>
</CustomField>