force-app/main/default/objects/School__c/fields/Popular_Majors__c.field-meta.xml
<CustomField>
    <fullName>Popular_Majors__c</fullName>
    <description>Please list popular majors pulled from the university website.</description>
    <label>Popular Majors</label>
    <type>TextArea</type>
</CustomField>