force-app/main/default/objects/School__c/fields/Return_to_Location_for_Event__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Location_for_Event__c</fullName>
    <description>Based on the success of the past event we hosted at Location 1 Name, should we return there for another event.</description>
    <label>Return to Location 1 for Event?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Definitely</fullName>
            </value>
            <value>
                <fullName>Very Likely</fullName>
            </value>
            <value>
                <fullName>Consider other options</fullName>
            </value>
            <value>
                <fullName>Indecisive</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>