force-app/main/default/objects/School__c/fields/Return_to_School_for_Event__c.field-meta.xml
<CustomField>
    <fullName>Return_to_School_for_Event__c</fullName>
    <description>Based on the event held at this campus, should we return for another event opportunity.</description>
    <label>Return to School for Event?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>