force-app/main/default/objects/School__c/fields/School_Newspaper_Website__c.field-meta.xml
<CustomField>
    <fullName>School_Newspaper_Website__c</fullName>
    <label>School Newspaper Website</label>
    <type>Url</type>
</CustomField>