force-app/main/default/objects/School__c/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <description>From College Navigator</description>
    <label>School Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 2-year, Private for-profit</fullName>
            </value>
            <value>
                <fullName>2-year, Private for-profit</fullName>
            </value>
            <value>
                <fullName>2-year, Private not-for-profit</fullName>
            </value>
            <value>
                <fullName>2-year, Public</fullName>
            </value>
            <value>
                <fullName>4-year, primarily associate&apos;s, Private for-profit</fullName>
            </value>
            <value>
                <fullName>4-year, primarily associate&apos;s, Private not-for-profit</fullName>
            </value>
            <value>
                <fullName>4-year, primarily associate&apos;s, Public</fullName>
            </value>
            <value>
                <fullName>4-year, Private for-profit</fullName>
            </value>
            <value>
                <fullName>4-year, Private not-for-profit</fullName>
            </value>
            <value>
                <fullName>4-year, Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>