force-app/main/default/objects/School__c/fields/Select__c.field-meta.xml
<CustomField>
    <fullName>Select__c</fullName>
    <label>Select</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 = Accept &lt; 20% of applicants</fullName>
            </value>
            <value>
                <fullName>2 = Accept 20-30% of applicants</fullName>
            </value>
            <value>
                <fullName>3 = Accept 30-40% of applicants</fullName>
            </value>
            <value>
                <fullName>4 = Accept 40-50% of applicants</fullName>
            </value>
            <value>
                <fullName>5 = Accept 50-60% of applicants</fullName>
            </value>
            <value>
                <fullName>6 = Accept 60-70% of applicants</fullName>
            </value>
            <value>
                <fullName>7 = Accept &gt;70% of applicants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>