force-app/main/default/objects/School__c/fields/Spring_2012_Classes_End__c.field-meta.xml
<CustomField>
    <fullName>Spring_2012_Classes_End__c</fullName>
    <label>Spring 2012 Classes End</label>
    <length>50</length>
    <type>Text</type>
</CustomField>