force-app/main/default/objects/School__c/fields/Spring_2012_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Spring_2012_Holidays__c</fullName>
    <label>Spring 2012 Holidays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>