force-app/main/default/objects/School__c/fields/Spring_2014_Classes_Start__c.field-meta.xml
<CustomField>
    <fullName>Spring_2014_Classes_Start__c</fullName>
    <label>Spring 2014 Classes Start</label>
    <length>50</length>
    <type>Text</type>
</CustomField>