force-app/main/default/objects/School__c/fields/Spring_Intramural_Sports__c.field-meta.xml
<CustomField>
    <fullName>Spring_Intramural_Sports__c</fullName>
    <label>Spring Intramural Sports</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3-Point Shootout</fullName>
            </value>
            <value>
                <fullName>AOA Basketball</fullName>
            </value>
            <value>
                <fullName>AOA Flag Football</fullName>
            </value>
            <value>
                <fullName>AOA Soccer</fullName>
            </value>
            <value>
                <fullName>Badminton</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Battleship</fullName>
            </value>
            <value>
                <fullName>Bowling</fullName>
            </value>
            <value>
                <fullName>Broomball</fullName>
            </value>
            <value>
                <fullName>Desert Bowl</fullName>
            </value>
            <value>
                <fullName>Disc Golf</fullName>
            </value>
            <value>
                <fullName>Dodgeball</fullName>
            </value>
            <value>
                <fullName>Field Hockey</fullName>
            </value>
            <value>
                <fullName>Flag Football</fullName>
            </value>
            <value>
                <fullName>Floor Hockey</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Great Pie Race</fullName>
            </value>
            <value>
                <fullName>Handball</fullName>
            </value>
            <value>
                <fullName>Home Run Derby</fullName>
            </value>
            <value>
                <fullName>HooverBall</fullName>
            </value>
            <value>
                <fullName>Horseshoes</fullName>
            </value>
            <value>
                <fullName>Ice Hockey</fullName>
            </value>
            <value>
                <fullName>Indoor Badminton</fullName>
            </value>
            <value>
                <fullName>Indoor Soccer</fullName>
            </value>
            <value>
                <fullName>Indoor Volleyball</fullName>
            </value>
            <value>
                <fullName>Inner Tube Water Polo</fullName>
            </value>
            <value>
                <fullName>Kickball</fullName>
            </value>
            <value>
                <fullName>Lacrosse</fullName>
            </value>
            <value>
                <fullName>March Madness Pick &apos;Em</fullName>
            </value>
            <value>
                <fullName>No Tap Bowling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>