force-app/main/default/objects/School__c/fields/Student_Organization_Website__c.field-meta.xml
<CustomField>
    <fullName>Student_Organization_Website__c</fullName>
    <label>Student Organization Website</label>
    <type>Url</type>
</CustomField>