force-app/main/default/objects/School__c/fields/Undergrad__c.field-meta.xml
<CustomField>
    <fullName>Undergrad__c</fullName>
    <label>Undergrad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>