force-app/main/default/objects/School__c/fields/Vendor_Programs__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Programs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Programs</label>
    <type>Checkbox</type>
</CustomField>