force-app/main/default/objects/School__c/fields/White__c.field-meta.xml
<CustomField>
    <fullName>White__c</fullName>
    <label>White</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>