force-app/main/default/objects/School__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address_City__c</columns>
    <columns>Address_State__c</columns>
    <columns>Undergrad__c</columns>
    <columns>Enrollment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>